Backed out changeset b8b4759b712f (bug 1451256) for bc failures on browser_876926_customize_mode_wrapping.js CLOSED TREE
UltraBlame original commit: 1ed7d32adedeec2b72849429339e3e045747f408

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -1666,18 +1666,6 @@ palette
 )
 ;
 }
-.
-toolbarpaletteitem
--
-box
-{
-pointer
--
-events
-:
-none
-;
-}
 menubar
 {
 -
